# cool-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
assets/: compilation-pipeline.puml
assignments/PA2/: cool.flex
assignments/PA3/: cool-parse.cc  cool-tree.handcode.h  cool.output  cool.y
assignments/PA4/: cool-tree.handcode.h  semant  semant.cc  semant.h
assignments/PA5/: cgen.cc  cgen.h  cool-tree.handcode.h  emit.h
include/: cgen_gc.h  cgen_gc.hpp  cool-io.hpp  cool-parse.h  cool-parse.hpp  cool-tree.h  cool-tree.hpp  cool.h  cool.hpp  list.h  list.hpp  options.hpp  stringtab.h  stringtab.hpp  stringtab_functions.h  stringtab_functions.hpp  symtab.h  symtab.hpp  tree.h  tree.hpp  utilities.h  utilities.hpp
include/PA2/: stringtab.h
lib/: trap.handler
src/cgen/: CMakeLists.txt  cgen.cc  cgen.cpp  cgen.h  cgen.hpp  cgen_supp.cc  cgen_supp.cpp  emit.h  emit.hpp
src/common/: CMakeLists.txt  cool-tree.cc  cool-tree.cpp  dumptype.cc  dumptype.cpp  stringtab.cc  stringtab.cpp  tree.cc  tree.cpp  utilities.cc  utilities.cpp
src/coolc/: CMakeLists.txt  main.cc  main.cpp
src/lexer/: CMakeLists.txt  cool.flex
src/parser/: CMakeLists.txt  cool.y
src/semant/: CMakeLists.txt  semant.cc  semant.cpp  semant.h  semant.hpp
tests/: CMakeLists.txt  cgen_test.cpp  lexer_test.cpp  parser_test.cpp  semant_test.cpp  test_helpers.hpp
tests/cgen_files/: casevoid.cl.out  dispatch-void-dynamic.cl.out  dispatch-void-static.cl.out  dispatchvoidlet.cl.out  primes.cl.out  while-val.cl.out
tests/lexer_files/: lexer  lexer.cmd
tests/parser_files/: addedlet.cool.out  assigngetstype.cool.out  assignment.cool.out  assignseq.cool.out  associativity-times.cool.out  associativity_minus.cool.out  associativity_plus.cool.out  associativitydiv.cool.out  attrcapitalname.cool.out  badblock.cool.out  baddispatch1.cool.out  baddispatch2.cool.out  baddispatch3.cool.out  baddispatch4.cool.out  badexprlist.cool.out  badfeaturenames.cool.out  badfeatures.cool.out  casemultiplebranch.cool.out  casenoexpr.cool.out  classbadinherits.cool.out  classbadname.cool.out  classnoname.cool.out  classonefield.cool.out  classtwofields.cool.out  comparisons-assoc.cool.out  complex.cool.out  dispatcharglist.cool.out  dispatchnoargs.cool.out  dispatchonearg.cool.out  emptyassign.cool.out  emptymethodbody.cool.out  emptyprogram.cool.out  emptystaticdispatch.cool.out  equalsassociativity.cool.out  extrasemicolonblock.cool.out  firstbindingerrored.cool.out  firstclasserrored.cool.out  ifexpressionblock.cool.out  ifnested.cool.out  ifnoelse.cool.out  (+22 more)
tests/semant_files/: anattributenamedself.cool.out  assignment.cool.out  assignnoconform.cool.out  attrbadinit.cool.out  attroverride.cool.out  badargs1.cool.out  badarith.cool.out  baddispatch.cool.out  badequalitytest.cool.out  badequalitytest2.cool.out  badmethodcallsitself.cool.out  badredefineint.cool.out  badstaticdispatch.cool.out  badwhilebody.cool.out  badwhilecond.cool.out  basic.cool.out  basicclassestree.cool.out  caseidenticalbranch.cool.out  cells.cl.cool.out  classes.cool.out  compare.cool.out  comparisons.cool.out  cycleinmethods.cool.out  dispatch.cool.out  dupformals.cool.out  expressionblock.cool.out  forwardinherits.cool.out  hairyscary.cl.cool.out  if.cool.out  inheritsObject.cool.out  inheritsbool.cool.out  inheritsselftype.cool.out  inheritsstring.cool.out  initwithself.cool.out  io.cool.out  isvoid.cool.out  letbadinit.cool.out  letinit.cool.out  letnoinit.cool.out  letself.cool.out  (+34 more)
